# matthew

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindNanoGUI.cmake  FindSurfaceMesh.cmake
cpp/: CMakeLists.txt
cpp/io/: CMakeLists.txt  pcd_reader.cpp  pcd_reader.h  simulink_receiver.cpp  simulink_receiver.h  trajectory_reader.cpp  trajectory_reader.h
cpp/io/pymesh/: IOUtils.cpp  MshLoader.cpp
cpp/lines/: CMakeLists.txt  grid.cpp  grid.h  line_renderer.cpp  line_renderer.h  point_renderer.cpp  point_renderer.h
cpp/msh/: CMakeLists.txt  IOUtils.cpp  MshLoader.cpp  MshLoader.h  myloadmsh.cpp  myloadmsh.h
cpp/msh/pymesh/: IOUtils.cpp  IOUtils.h  MshLoader.cpp  MshLoader.h
cpp/renderers/: CMakeLists.txt  frame_renderer.cpp  frame_renderer.h  grid.cpp  grid.h  line_renderer.cpp  line_renderer.h  point_cloud_renderer.cpp  point_cloud_renderer.h  point_renderer.cpp  point_renderer.h  renderer.h  vectorfield_renderer.cpp  vectorfield_renderer.h
curvature/: viewer.cpp  viewer.h
data/: bunny.pcd  colored.pcd  fox.pcd  hedra_open.off  mannequin.off  nefertiti.off
embedding_solver/: CMakeLists.txt  embedding_solver.cpp  embedding_solver.h  main.cpp
include/: color_window.h  matthew.h  meshiew.h
matthew/: CMakeLists.txt  color_window.cpp  color_window.h  grid.cpp  line_renderer.cpp  line_renderer.h  main.cpp  matthew.cpp  matthew.h  mesh_processing.cpp  mesh_processing.h  meshiew.cpp  meshiew.h  pointiew.cpp  pointiew.h  viewer.cpp  viewer.h
matthew/shaders/: fragment_light.glsl  normals_fragment  normals_fragment.glsl  normals_geometry  normals_geometry.glsl  normals_vertex  normals_vertex.glsl  shaders.h  simple_fragment.glsl  simple_vertex.glsl
meshiew/: CMakeLists.txt  main.cpp  viewer.h
mimp_viewer/: CMakeLists.txt  main.cpp  mimp_state.pb.cc  mimp_state.pb.h  mimp_viewer.cpp  mimp_viewer.h
python/: matthew.py
python/matthew/: __init__.py  matthew.py  pcdexporter.py
scripts/: discrete_chaos.py  lorentz.py  simple-test.py
shaders/: fragment_light.glsl  grid_frag.glsl  grid_verts.glsl  line_shader_frags.glsl  line_shader_verts.glsl  normals_fragment.glsl  normals_geometry.glsl  point_cloud_verts.glsl  simple_fragment.glsl  simple_vertex.glsl  single_point_frags.glsl  single_point_verts.glsl
